--- a/tsconfig-extension.json
+++ b/tsconfig-extension.json
@@ -9,7 +9,11 @@
     ],
     "outDir": "./dist",
     "rootDir": "./src/extension",
+    "": "",
+    "sourceMap": false,
+    "declaration": false,
     "strict": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+  },
+  "include": ["src/extension/*"]
 }
