--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.75",
+    "@types/firefox-webext-browser": "^67.0.2",
     "@vue/cli-plugin-typescript": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "node-sass": "^4.9.0",
