--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "tslint && vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
