--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "build": "./scripts/build.sh",
-    "build:player": "./scripts/build-player.sh",
+    "build:vue": "./scripts/build-vue.sh",
+    "build:vue:debug": "vue-cli-service build",
     "build:extension": "./scripts/build-extension.sh",
     "lint": "tslint && vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
@@ -20,7 +22,6 @@
     "@vue/cli-plugin-typescript": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
     "node-sass": "^4.9.0",
-    "nodemon": "^1.18.6",
     "sass-loader": "^7.1.0",
     "tslint": "^5.11.0",
     "typescript": "^3.4.3",
