--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
+    "vue-ripple-directive": "^2.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
