--- a/.eslintrc
+++ b/.eslintrc
@@ -45,6 +45,7 @@
             "rules": {
                 "@typescript-eslint/no-empty-interface": "off",
                 "@typescript-eslint/no-unused-vars": "off",
+                "@typescript-eslint/indent": "off",
             }
         }
     ]
