--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-ripple-directive": "^2.0.1",
+    "vue-slider-component": "^3.0.34",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
