--- a/package.json
+++ b/package.json
@@ -4,23 +4,29 @@
   "private": true,
   "scripts": {
     "build": "./scripts/build.sh",
-    "build:vue": "./scripts/build-vue.sh",
-    "build:vue:debug": "vue-cli-service build",
-    "build:extension": "./scripts/build-extension.sh",
-    "lint": "tslint && vue-cli-service lint"
+    "build:debug": "./scripts/build.sh debug",
+    "lint": "eslint \"src/**/*.{ts,vue}\""
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "prettier": "^1.18.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
+    "vue-ripple-directive": "^2.0.1",
+    "vue-slider-component": "^3.0.34",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.75",
     "@types/firefox-webext-browser": "^67.0.2",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
     "@vue/cli-plugin-typescript": "^3.9.0",
     "@vue/cli-service": "^3.9.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "tslint": "^5.11.0",
