Injected player on vrv

--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -30,20 +30,14 @@
   "content_scripts": [
     {
       "matches": ["file:///media/aklinker1/External%20Storage/Programming/full-stack/anime-skip/web-extension/example/index.html"],
-      "js": ["js/services/example.js", "js/player.js"],
-      "css": ["css/player.css"]
+      "js": ["js/services/example.js", "js/services/all.js", "js/player.js"],
+      "css": ["css/player.css", "css/services/example.css"]
     },
-    
     {
       "matches": ["https://static.vrv.co/*"],
-      "js": ["data/timestamps.js", "player-injection.js"],
-      "css": [],
+      "js": ["js/services/vrv.js", "js/services/all.js", "js/player.js"],
+      "css": ["css/player.css", "css/services/vrv.css"],
       "all_frames": true
-    },
-    {
-      "matches": ["https://vrv.co/watch/*", "https://vrv.co/watch/*"],
-      "js": ["web-injection.js"],
-      "css": []
     }
   ],
   "icons": {
