--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -40,6 +40,9 @@
       "all_frames": true
     }
   ],
+  "background": {
+    "scripts": ["js/background.js"]
+  },
   "icons": {
     "16": "img/extension-logo/16.png",
     "32": "img/extension-logo/32.png",
