--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -29,7 +29,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["file:///media/aklinker1/External%20Storage/Programming/full-stack/anime-skip/web-extension/example/index.html"],
+      "matches": ["file:///*/example/index.html"],
       "js": ["js/services/example.js", "js/services/all.js", "js/player.js"],
       "css": ["css/player.css", "css/services/example.css"]
     },
