--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,7 +48,7 @@
     "typeRoots": [                                    /* List of folders to include type definitions from. */
       "node_modules/@types",
       "node_modules/web-ext-types",
-      "types/globals.d.ts"
+      "types/*"
     ], 
     // "types": [],                                   /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,             /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
