--- a/src/manifest.json
+++ b/src/manifest.json
@@ -30,20 +30,12 @@
   "content_scripts": [
     {
       "matches": ["file:///*/example/index.html"],
-      "js": [
-        "content-scripts/all.js",
-        "content-scripts/example/index.js",
-        "player/index.js"
-      ],
+      "js": ["content-scripts/all.js", "content-scripts/example/index.js", "player/index.js"],
       "css": ["player/index.css", "content-scripts/example/index.css"]
     },
     {
       "matches": ["https://static.vrv.co/*"],
-      "js": [
-        "content-scripts/all.js",
-        "content-scripts/vrv.js",
-        "player/index.js"
-      ],
+      "js": ["content-scripts/all.js", "content-scripts/vrv/index.js", "player/index.js"],
       "css": ["player/index.css", "content-scripts/vrv/index.css"],
       "all_frames": true
     }
