--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-chrome-extension",
-  "version": "0.1.0",
+  "name": "anime-skip-web-ext",
+  "version": "0.0.1.4",
   "private": true,
   "author": "Aaron Klinker <aaronklinker1@gmail.com>",
   "engines": {
@@ -12,7 +12,7 @@
     "prettier:write": "npm run prettier -- --write",
     "build": "cross-env NODE_ENV=production webpack --hide-modules",
     "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
-    "build-zip": "node scripts/build-zip.js",
+    "package": "node scripts/package.js",
     "watch": "npm run build -- --watch",
     "watch:dev": "cross-env HMR=true npm run build:dev -- --watch"
   },
@@ -74,7 +74,7 @@
     "typescript": "^3.8.3",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.6.10",
-    "web-ext": "^4.1.0",
+    "web-ext": "^4.3.0",
     "web-ext-types": "^3.2.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.3.10",
