--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "core-js": "^3.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^3.4.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
