--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
     "package": "node scripts/package.js",
     "watch": "yarn build -- --watch",
-    "watch:dev": "cross-env HMR=true yarn build:dev -- --watch"
+    "watch:dev": "cross-env HMR=true yarn build:dev -- --watch",
+    "test": "jest --runInBand",
+    "test:watch": "yarn test --watch"
   },
   "husky": {
     "hooks": {
@@ -23,6 +25,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "fuzzysort": "^1.1.4",
     "md5": "^2.2.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
@@ -38,6 +41,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime-corejs3": "^7.4.0",
+    "@types/jest": "^26.0.7",
     "@types/md5": "^2.1.33",
     "@types/node": "^13.9.1",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
@@ -51,6 +55,7 @@
     "core-js": "^3.0.1",
     "cross-env": "^5.2.0",
     "css-loader": "^3.4.0",
+    "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
@@ -65,11 +70,14 @@
     "eslint-plugin-vue": "^6.0.1",
     "file-loader": "^5.0.2",
     "husky": "^2.4.0",
+    "jest": "^26.2.1",
+    "jest-mocha-reporter": "^1.0.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.9.3",
     "prettier": "^1.17.1",
     "pretty-quick": "^1.8.0",
     "sass-loader": "^7.1.0",
+    "ts-jest": "^26.1.4",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3",
     "vue-loader": "^15.4.2",
