--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Allows users to skip fillers/intro/recaps on VRV.",
   "manifest_version": 2,
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["activeTab", "storage", "tabs"],
   "browser_action": {
     "browser_style": true,
     "default_icon": {
