--- a/src/manifest.json
+++ b/src/manifest.json
@@ -29,15 +29,21 @@
   "content_scripts": [
     {
       "matches": ["file:///*/example/index.html"],
-      "js": ["content-scripts/all.js", "content-scripts/example/index.js", "player/index.js"],
-      "css": ["player/index.css", "content-scripts/example/index.css"]
-    },
-    {
-      "matches": ["file:///*/example/index.html"],
       "js": ["content-scripts/keyboard-blocker.js"],
       "run_at": "document_start"
     },
+    {
+      "matches": ["file:///*/example/index.html"],
+      "js": ["content-scripts/all.js", "content-scripts/example/index.js", "player/index.js"],
+      "css": ["player/index.css", "content-scripts/example/index.css"]
+    },
 
+    {
+      "matches": ["https://static.vrv.co/*"],
+      "js": ["content-scripts/keyboard-blocker.js"],
+      "run_at": "document_start",
+      "all_frames": true
+    },
     {
       "matches": ["https://static.vrv.co/*"],
       "js": ["content-scripts/all.js", "content-scripts/vrv/index.js", "player/index.js"],
