--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,44 +19,8 @@
   },
   "content_scripts": [
     {
-      "matches": ["file:///*/example/index.html"],
-      "js": ["content-scripts/keyboard-blocker.js"],
-      "run_at": "document_start"
-    },
-
-    {
-      "matches": ["http://localhost:8080/get-started*", "https://*anime-skip.com/get-started*"],
+      "matches": ["https://www.anime-skip.com/get-started*", "https://anime-skip.com/get-started*"],
       "js": ["browser-polyfill.js", "content-scripts/anime-skip/index.js"]
-    },
-
-    {
-      "matches": ["file:///*/example/index.html"],
-      "js": [
-        "browser-polyfill.js",
-        "content-scripts/all.js",
-        "content-scripts/example/index.js",
-        "player/index.js"
-      ],
-      "css": ["player/index.css", "content-scripts/example/index.css"]
-    },
-
-    {
-      "matches": ["https://static.vrv.co/*"],
-      "js": ["content-scripts/keyboard-blocker.js"],
-      "run_at": "document_start",
-      "all_frames": true
-    },
-
-    {
-      "matches": ["https://static.vrv.co/*"],
-      "js": [
-        "browser-polyfill.js",
-        "content-scripts/all.js",
-        "content-scripts/vrv/index.js",
-        "player/index.js"
-      ],
-      "css": ["player/index.css", "content-scripts/vrv/index.css"],
-      "all_frames": true
     }
   ],
   "background": {
