Reformatted default page action matches

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,10 +4,7 @@
   "manifest_version": 2,
   "permissions": ["storage", "tabs"],
   "page_action": {
-    "show_matches": [
-      "https://www.anime-skip.com/get-started*",
-      "https://anime-skip.com/get-started*"
-    ],
+    "show_matches": ["https://www.anime-skip.com/*", "https://anime-skip.com/*"],
     "browser_style": true,
     "default_icon": {
       "16": "assets/extension-logo/16.png",
