--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "axios": "^0.19.0",
     "fuzzysort": "^1.1.4",
     "md5": "^2.2.1",
-    "vue": "^2.6.10",
+    "vue": "2.6.11",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-ripple-directive": "^2.0.1",
