--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,21 +1,21 @@
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558 
-    // for the documentation about the tasks.json format
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "label": "Build",
-            "type": "shell",
-            "group": "build",
-            "command": "yarn build",
-            "problemMatcher": []
-        },
-        {
-            "label": "Build (Debug)",
-            "type": "shell",
-            "group": "build",
-            "command": "yarn build:debug",
-            "problemMatcher": []
-        }
-    ]
+  // See https://go.microsoft.com/fwlink/?LinkId=733558
+  // for the documentation about the tasks.json format
+  "version": "2.0.0",
+  "tasks": [
+    {
+      "label": "Build",
+      "type": "shell",
+      "group": "build",
+      "command": "yarn build",
+      "problemMatcher": []
+    },
+    {
+      "label": "Build (Production)",
+      "type": "shell",
+      "group": "build",
+      "command": "yarn build:prod",
+      "problemMatcher": []
+    }
+  ]
 }
