--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "prettier": "prettier \"src/**/*.{ts,vue}\"",
     "prettier:write": "yarn prettier -- --write",
     "package": "./scripts/package.sh",
-    "build": "cross-env NODE_ENV=production webpack --hide-modules",
-    "build:dev": "cross-env NODE_ENV=development webpack --hide-modules",
-    "watch": "yarn build -- --watch",
-    "watch:dev": "cross-env HMR=true yarn build:dev -- --watch",
+    "build": "cross-env NODE_ENV=development webpack --hide-modules",
+    "build:prod": "cross-env NODE_ENV=production webpack --hide-modules",
+    "start": "cross-env HMR=true yarn build:dev -- --watch",
+    "start:prod": "cross-env HMR=true yarn build -- --watch",
     "test": "jest --runInBand",
     "test:watch": "yarn test --watch"
   },
