Refactoed deploy to be JS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,6 @@
   "editor.formatOnSave": true,
   "editor.formatOnPaste": false,
   "files.insertFinalNewline": true,
-  "files.trimFinalNewlines": true
+  "files.trimFinalNewlines": true,
+  "cSpell.words": ["camelcase"]
 }
