--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Anime Skip",
+  "name": "Anime Skip Player",
   "description": "Skip intros, credits, filler and more on supported services",
   "manifest_version": 2,
   "permissions": ["storage", "tabs"],
