--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue-ripple-directive": "^2.0.1",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^3.2.2",
+    "vue-typed-mixins": "^0.2.0",
     "vuex": "^3.0.1",
     "webextension-polyfill": "^0.6.0"
   },
