Add script to generate staged zips

--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "check-manifest": "yarn build:prod && yarn web-ext --config=.web-ext.config.js lint && yarn build:chrome:prod && yarn web-ext --config=.web-ext.config.js lint",
     "package": "node scripts/package.js",
     "package:dry": "cross-env DRY_RUN=true yarn package",
+    "staged-zip": "mkdir -p artifacts; rm -f artifacts/staged.zip && cd dist && zip -r ../artifacts/staged.zip * ; cd ..",
     "build": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=development webpack --watch",
     "build:prod": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=production webpack",
+    "build:staged": "yarn build:prod && yarn staged-zip",
     "build:chrome": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
     "build:chrome:prod": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=production webpack",
+    "build:chrome:staged": "yarn build:prod && yarn staged-zip",
     "start": "cross-env HMR=true BUILD_FOR=firefox NODE_ENV=development webpack --watch",
     "start:prod": "cross-env BUILD_FOR=firefox NODE_ENV=production webpack",
     "start:chrome": "cross-env HMR=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
