--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "jsxBracketSameLine": true,
-    "endOfLine": "lf",
-    "printWidth": 100,
-    "tabWidth": 2
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "jsxBracketSameLine": true,
+  "endOfLine": "lf",
+  "printWidth": 100,
+  "tabWidth": 2,
+  "vueIndentScriptAndStyle": false,
+  "arrowParens": "avoid"
 }
