--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:chrome": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
     "build:chrome:prod": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=production webpack",
     "build:chrome:staged": "yarn build:prod && yarn staged-zip",
-    "start": "cross-env HMR=true BUILD_FOR=firefox NODE_ENV=development webpack --watch",
+    "start": "vite",
     "start:prod": "cross-env BUILD_FOR=firefox NODE_ENV=production webpack",
     "start:chrome": "cross-env HMR=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
     "start:chrome:prod": "cross-env BUILD_FOR=chrome NODE_ENV=production webpack",
@@ -37,6 +37,7 @@
     }
   },
   "dependencies": {
+    "@anime-skip/ui": "./anime-skip-ui-v0.0.9.tgz",
     "axios": "^0.19.0",
     "fuzzysort": "^1.1.4",
     "md5": "^2.2.1",
@@ -49,15 +50,20 @@
     "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/runtime-corejs3": "^7.4.0",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/fs-extra": "^9.0.2",
     "@types/jest": "^26.0.7",
     "@types/md5": "^2.1.33",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
+    "@vitejs/plugin-vue": "^1.0.6",
+    "@vitejs/plugin-vue-jsx": "^1.0.2",
     "@vue/compiler-sfc": "^3.0.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "archiver": "^3.0.0",
+    "autoprefixer": "^9",
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.0.1",
@@ -84,20 +90,19 @@
     "jest": "^26.2.1",
     "jest-mocha-reporter": "^1.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.9.3",
+    "postcss": "^7",
     "prettier": "^2.2.1",
     "pretty-quick": "^1.8.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.11",
     "typescript": "^3.8.3",
+    "vite": "^2.0.0-beta.30",
     "vue-loader": "^16.1.1",
     "web-ext": "^4.3.0",
     "web-ext-types": "^3.2.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-extension-reloader": "^1.1.0",
-    "webpack-shell-plugin-next": "^1.1.5",
     "zip-a-folder": "^0.0.12"
   }
 }
