--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.11",
     "typescript": "^3.8.3",
-    "vite": "^2.0.0-beta.30",
+    "vite": "^2.0.1",
     "vue-loader": "^16.1.1",
     "web-ext": "^4.3.0",
     "web-ext-types": "^3.2.1",
