--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "package": "node scripts/package.js",
     "package:dry": "cross-env DRY_RUN=true yarn package",
     "staged-zip": "mkdir -p artifacts; rm -f artifacts/staged.zip && cd dist && zip -r ../artifacts/staged.zip * ; cd ..",
-    "build": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=development webpack --watch",
+    "build": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=development vite build",
     "build:prod": "cross-env BUILD_ONLY=true BUILD_FOR=firefox NODE_ENV=production webpack",
     "build:staged": "yarn build:prod && yarn staged-zip",
     "build:chrome": "cross-env BUILD_ONLY=true BUILD_FOR=chrome NODE_ENV=development webpack --watch",
@@ -63,7 +63,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "archiver": "^3.0.0",
-    "autoprefixer": "^9",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.0.1",
@@ -90,12 +90,12 @@
     "jest": "^26.2.1",
     "jest-mocha-reporter": "^1.0.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "postcss": "^7",
+    "postcss": "^8.2.6",
     "prettier": "^2.2.1",
     "pretty-quick": "^1.8.0",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "tailwindcss": "^2.0.3",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.11",
     "typescript": "^3.8.3",
