--- a/package.json
+++ b/package.json
@@ -37,11 +37,12 @@
     }
   },
   "dependencies": {
+    "@anime-skip/ui": "^0.0.14",
     "axios": "^0.19.0",
     "fuzzysort": "^1.1.4",
     "md5": "^2.2.1",
     "vue": "^3.0.4",
-    "vuex": "^4.0.0-rc.2",
+    "vuex": "^4.0.0",
     "webextension-polyfill": "^0.6.0"
   },
   "devDependencies": {
@@ -54,11 +55,12 @@
     "@types/md5": "^2.1.33",
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
-    "@vue/compiler-sfc": "^3.0.4",
+    "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "archiver": "^3.0.0",
-    "babel-loader": "^8.0.2",
+    "autoprefixer": "^10.2.4",
+    "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.0.1",
     "cross-env": "^5.2.0",
@@ -83,21 +85,25 @@
     "husky": "^4.3.0",
     "jest": "^26.2.1",
     "jest-mocha-reporter": "^1.0.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.9.3",
+    "mini-css-extract-plugin": "^1.3.8",
+    "postcss": "^8.2.6",
+    "postcss-loader": "^5.0.0",
     "prettier": "^2.2.1",
     "pretty-quick": "^1.8.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "sass-resources-loader": "^2.1.1",
+    "tailwindcss": "^2.0.3",
     "ts-jest": "^26.1.4",
-    "ts-loader": "^8.0.11",
-    "typescript": "^3.8.3",
-    "vue-loader": "^16.1.1",
-    "web-ext": "^4.3.0",
+    "ts-loader": "^8.0.17",
+    "typescript": "^4.1.5",
+    "vue-loader": "^16.1.2",
+    "web-ext": "^5.5.0",
     "web-ext-types": "^3.2.1",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-extension-reloader": "^1.1.0",
-    "webpack-shell-plugin-next": "^1.1.5",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-extension-reloader": "^1.1.4",
+    "webpack-shell-plugin-next": "^2.1.1",
     "zip-a-folder": "^0.0.12"
   }
 }
