chore: Fix compilation errors

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "compile": "tsc -p . --noEmit",
-    "lint": "eslint --ext .js,.ts,.vue src --max-warnings=0",
+    "lint": "eslint . --ext .js,.ts,.vue --max-warnings 0 --fix",
+    "lint:no-fix": "eslint . --ext .js,.ts,.vue --max-warnings 0",
     "prettier": "prettier --check \"src/**/*.{js,ts,vue}\"",
     "prettier:write": "yarn prettier --write",
     "check-manifest": "yarn build:prod && yarn web-ext --config=.web-ext.config.js lint && yarn build:chrome:prod && yarn web-ext --config=.web-ext.config.js lint",
@@ -53,8 +54,8 @@
     "@types/fs-extra": "^9.0.2",
     "@types/jest": "^26.0.7",
     "@types/md5": "^2.1.33",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
@@ -67,7 +68,7 @@
     "css-loader": "^3.4.0",
     "dotenv": "^8.2.0",
     "ejs": "^2.6.1",
-    "eslint": "^6.8.0",
+    "eslint": "^7.22.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-friendly-formatter": "^4.0.1",
@@ -78,7 +79,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^7.2.0",
+    "eslint-plugin-vue": "^7.7.0",
     "file-loader": "^5.0.2",
     "form-data": "^3.0.0",
     "fs-extra": "^9.0.1",
@@ -95,7 +96,7 @@
     "tailwindcss": "^2.0.3",
     "ts-jest": "^26.1.4",
     "ts-loader": "^8.0.17",
-    "typescript": "^4.1.5",
+    "typescript": "^4.2.3",
     "vue-loader": "^16.1.2",
     "web-ext": "^5.5.0",
     "web-ext-types": "^3.2.1",
